deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-client-k8s
  namespace: hello
spec:
  selector:
    matchLabels:
      app: hello-client-k8s
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-client-k8s
    spec:
      containers:
        - name: hello-client-k8s
          image: ghcr.io/nuwas/hello-world-go:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
