deploy/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: hello-client-k8s-svc
  namespace: hello
spec:
  selector:
    app: hello-client-k8s
  ports:
    - protocol: "TCP"
      port: 8080 
      targetPort: 8080
  type: ClusterIP
