deploy/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-vc
  namespace: hello
spec:
  hosts:
  - tt.nuwas.nn
  gateways:
  - istio-system/nuwas-gateway
  http:
  - match:
    - uri:
        prefix: /yyyy-yyyy/
    route:
     - destination:
        host: hello-client-k8s-svc
        port:
          number: 8080
